Fixed alignment issues.

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -757,6 +757,11 @@ ul.social-buttons li a {
     transition: all .3s;
 }
 
+ul.ity {
+    text-align: left;
+    max-width: 300px;
+}
+
 ul.social-buttons li a:hover,
 ul.social-buttons li a:focus,
 ul.social-buttons li a:active {
